# rust-aipack-one

./: Cargo.toml  README.md
src/: error.rs  main.rs
src/cli/: args.rs
