[package]
name = "aipack"
version = "0.0.1"
edition = "2021"
rust-version = "1.78"
license = "MIT OR Apache-2.0"
description = "AIPack builder, runner, publisher"
keywords = [
	"generative-ai",
	"agent",
	"openai",
	"llama",
	"ollama"
]
homepage = "https://github.com/jeremychone/rust-aipack-one"
repository = "https://github.com/jeremychone/rust-aipack-one"

[lints.rust]
unsafe_code = "forbid"
unused = { level = "allow", priority = -1 } # For exploratory dev.

[dependencies]
# -- Json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3", features = ["macros"] }
# -- Cli
clap =  {version = "4.5.17", features = ["cargo", "derive"]}
# -- Others
derive_more = { version = "1.0.0-beta", features = ["from"] }
